# crabot

./: .env.example  .gitignore  CLAUDE.md  LICENSE  PROGRESS.md  README.md  cli.mjs  crabot  crabot.cmd  dev.sh  install.ps1  install.sh  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.cli.json  tsconfig.json
crabot-memory/: .gitignore  DEVELOPMENT.md  README.md  TEST_REPORT.md  config.example.yaml  config.yaml  crabot-module.yaml  pyproject.toml  quick_test.py  start.sh
crabot-memory/eval/: README.md  answerer.py  cli.py  judge.py  report.py  runner.py  sample_loader.py
crabot-memory/eval/samples/: Abstention.yaml  IE.yaml  KU.yaml  MR.yaml  TR.yaml
crabot-memory/scripts/: fix_memory_scopes.py  migrate_to_scene_profile.py  run_eval_smoke.sh
crabot-memory/src/: __init__.py  _config_ref.py  config.py  main.py  module.py  types.py
crabot-memory/src/core/: long_term.py  short_term.py
crabot-memory/src/long_term_v2/: agentic_tools.py  bi_temporal.py  chain_of_note.py  embedder.py  evolution.py  maintenance.py  markdown_io.py  paths.py  query_preprocess.py  recall.py  recall_pipeline.py  reranker.py  rpc.py  rrf.py  schema.py  snapshot.py  sqlite_index.py  store.py  type_boost.py
crabot-memory/src/storage/: scene_profile_store.py  short_term_store.py  sqlite_store.py  vector_store.py
crabot-memory/src/utils/: embedding.py  (+1 more)
crabot-memory/tests/: test_llm_client_format_routing.py  test_module.py  test_scene_profile_store.py  test_types.py
crabot-memory/upgrade/: README.md  from_v0_to_v1.py  from_v1_to_v2.py  from_v2_to_v3.py  test_from_v2_to_v3.py
(+678 files in other folders)
